--- a/home.css
+++ b/home.css
@@ -135,31 +135,18 @@ input[type=checkbox] {
 }
 
 
-/* news context */
-.n-title, .n-context {
+/* context */
+.m-title, question {
   padding: 4px;
 }
 
-.n-title {
+.m-title {
   border-bottom-style: solid;
-}
-
-.n-title h2, .n-title p {
-  display: inline-block;
-  font-size: 1em;
 }
 
 .n-title div {
   text-align: right;
   padding: 4px;
-}
-
-.imp h2 {
-  background-color: red;
-  padding: 2px;
-  border-radius: 6px;
-  display: inline-block;
-  color: white;
 }
 
 @media (max-width: 465px) {
