--- a/home.css
+++ b/home.css
@@ -110,7 +110,7 @@ input[type=checkbox] {
     transition: 0.3s ease;
   } 
 
-  menucheck:checked ~ .menu {
+  input[type:checkbox]:checked ~ .menu {
     transition: 1s ease;
     display: block;
     z-index: 20;
